--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
         <title>eLab.one</title>
     </head>
     <body>
+        <style>
+            body {
+            background-color: black;
+            color: #00FF00;
+            text-align:center;
+            margin: 10%;
+            }
+        </style>
         <h1>eLab.one</h1>
         <h2>Nothing to see here.</h2>
     </body>
